# 42run

./: .gitignore  .gitmodules  CMakeLists.txt
blender_model/: floor1.blend  floor1.blend1  table.blend
shaders/: run.frag  run.vert
src/: Camera.cpp  Camera.hpp  GameObject.cpp  GameObject.hpp  InputHandler.cpp  InputHandler.hpp  Model.cpp  Model.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  env.cpp  env.hpp  main.cpp  run.hpp
